--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,24 @@
        
 </div>
 <section class="content">
-
+    <div class="contentText6">
+        <h1>Школа Английского языка
+        </h1>
+        </div>
+    <div class="contentText3">
+<h1>Не дают повышение на работе
+</h1>
+</div>
+<div class="contentText2">
+<h1>Страшно ехать заграницу</h1>
+</div>
+<div class="contentText1">
+    <h1>Приложение для ефективного изучения Английского язика в игровой форме</h1>
+    </div>
+    <div class="contentText4">
+        <h1>Не можешь сказать иностранцу, как пройти в ресторан</h1>
+        </div>
+        
 </section>
     <script src="./main.js"></script>
 </body>
