--- a/src/index.html
+++ b/src/index.html
@@ -25,23 +25,45 @@
 </div>
 <section class="content">
     <div class="contentText6">
-        <h1>Школа Английского языка
-        </h1>
+        <h2>Школа Английского языка
+        </h2>
         </div>
     <div class="contentText3">
-<h1>Не дают повышение на работе
-</h1>
+<h2>Не дают повышение на работе
+</h2>
 </div>
 <div class="contentText2">
-<h1>Страшно ехать заграницу</h1>
+<h2>Страшно ехать заграницу</h2>
 </div>
 <div class="contentText1">
-    <h1>Приложение для ефективного изучения Английского язика в игровой форме</h1>
+    <h2>Приложение для ефективного изучения Английского язика в игровой форме</h2>
     </div>
     <div class="contentText4">
-        <h1>Не можешь сказать иностранцу, как пройти в ресторан</h1>
+        <h2>Не можешь сказать иностранцу, как пройти в ресторан</h2>
         </div>
         
+</section>
+<section class="contentCard">
+    <div class="title">
+    <h1>Оцените преимущества приложения.</h1>
+</div>
+<div class="wrapper">
+<div class="card1">
+    <img src="./img/course_type_24.jpg" alt="">
+    <h1>Учебник</h1>
+  <span>Более 3500 тысяч слов для изучения, разбитых на разделы по уровню твоей подготовки с удобной навигацией</span>
+</div>
+<div class="card1">
+    <img src="./img/evening_english.jpg" alt="">
+    <h1>Игры</h1>
+  <span>Увлекательные игры на развитие запоминания слов, восприятия на слух и письма.</span>
+</div>
+<div class="card1">
+    <img src="./img/education-english.jpg" alt="">
+    <h1>Статистика</h1>
+  <span>Отслеживай свой прогресс в индивидуальной статистике, вдохновляйся на и достижение новых результатов!</span>
+</div>
+</div>
 </section>
     <script src="./main.js"></script>
 </body>
