--- a/src/index.html
+++ b/src/index.html
@@ -71,10 +71,13 @@
 </div>
 <div class="wrapper">
     <div class="card2">
-        <img src="./img/evening_english.jpg" alt="">
+        
+        <img src="./img/ava.jpg" alt="">
+       <div>
         <h1>Леонид</h1>
       <span>Пока единственный разраб этого проекта.</span>
     </div>
+</div>
 </div>
 </section>
 <footer>
