--- a/src/book.html
+++ b/src/book.html
@@ -58,7 +58,7 @@
     </section>
     <section class="namber_page">
         <div class="nx">
-        <a href="#" class="prev">&laquo</a>
+        <a  class="prev">&laquo</a>
     </div>
         <ul class="pagination modal-3 " >
             <li><a href="#" class="active">1</a></li>
@@ -98,7 +98,7 @@
             <li> <a href="#">30</a></li>
           </ul>
           <div class="nx">
-          <a href="#" class="next">&raquo;</a>
+          <a  class="next">&raquo;</a>
         </div>
     </section>
 
