--- a/src/book.html
+++ b/src/book.html
@@ -61,41 +61,40 @@
         <a  class="prev">&laquo</a>
     </div>
         <ul class="pagination modal-3 " >
-            <li><a href="#" class="active">1</a></li>
-            <li> <a href="#">2</a></li>
-            <li> <a href="#">3</a></li>
-            <li> <a href="#">4</a></li>
-            <li> <a href="#">5</a></li>
-            <li> <a href="#">6</a></li>
-            <li> <a href="#">7</a></li>
-            <li> <a href="#">8</a></li>
-            <li> <a href="#">9</a></li>
-            <li> <a href="#">10</a></li>
+            <li><a data = "0">1</a></li>
+            <li> <a  data = "1">2</a></li>
+            <li> <a  data = "2">3</a></li>
+            <li> <a  data = "4">5</a></li>
+            <li> <a  data = "5">6</a></li>
+            <li> <a  data = "6">7</a></li>
+            <li> <a  data = "7">8</a></li>
+            <li> <a  data = "8">9</a></li>
+            <li> <a  data = "9">10</a></li>
           </ul>
          
           <ul class="pagination modal-3 " >
-            <li><a href="#" class="active">11</a></li>
-            <li> <a href="#">12</a></li>
-            <li> <a href="#">13</a></li>
-            <li> <a href="#">14</a></li>
-            <li> <a href="#">15</a></li>
-            <li> <a href="#">16</a></li>
-            <li> <a href="#">17</a></li>
-            <li> <a href="#">18</a></li>
-            <li> <a href="#">19</a></li>
-            <li> <a href="#">20</a></li>
+            <li><a   data = "10">11</a></li>
+            <li> <a  data = "11">12</a></li>
+            <li> <a  data = "12">13</a></li>
+            <li> <a  data = "13">14</a></li>
+            <li> <a  data = "14">15</a></li>
+            <li> <a  data = "15">16</a></li>
+            <li> <a  data = "16">17</a></li>
+            <li> <a  data = "17">18</a></li>
+            <li> <a  data = "18">19</a></li>
+            <li> <a  data = "19">20</a></li>
           </ul>
           <ul class="pagination modal-3 " >
-            <li><a href="#" class="active">21</a></li>
-            <li> <a href="#">22</a></li>
-            <li> <a href="#">23</a></li>
-            <li> <a href="#">24</a></li>
-            <li> <a href="#">25</a></li>
-            <li> <a href="#">26</a></li>
-            <li> <a href="#">27</a></li>
-            <li> <a href="#">28</a></li>
-            <li> <a href="#">29</a></li>
-            <li> <a href="#">30</a></li>
+            <li><a   data = "20">21</a></li>
+            <li> <a  data = "21">22</a></li>
+            <li> <a  data = "22">23</a></li>
+            <li> <a  data = "23">24</a></li>
+            <li> <a  data = "24">25</a></li>
+            <li> <a  data = "25">26</a></li>
+            <li> <a  data = "26">27</a></li>
+            <li> <a  data = "27">28</a></li>
+            <li> <a  data = "28">29</a></li>
+            <li> <a  data = "29">30</a></li>
           </ul>
           <div class="nx">
           <a  class="next">&raquo;</a>
