--- a/src/book.html
+++ b/src/book.html
@@ -12,12 +12,12 @@
         <div class="heder">
             <nav class="top-menu" id="top-menu">
                 <ul class="menu-main">
-                  <li class="left-item"><a href="">Главная</a></li>
+                  <li class="left-item"><a href="./index.html">Главная</a></li>
                   <li class="left-item"><a href="./book.html">Учебник</a></li>
                   <li class="left-item"><a href="">Аудиовызов</a></li>
                   <li class="right-item"><a href="">Спринт</a></li>
                   <li class="right-item"><a href="">Статистика</a></li>
-                  <li class="right-item"><a href="">Вход</a></li>
+                  <li class="right-item"><a href="./entrance.html">Вход</a></li>
               </ul>
                 <a class="navbar-logo" href=""><img src="./img/the-language-village.svg"></a>
               </nav>
