--- a/src/book.html
+++ b/src/book.html
@@ -25,6 +25,7 @@
         </div>
     <section class="book_card">
         <h1>Учебник</h1>
+        <p>Выберете уровень сложности</p>
         <div class="wrapper_book">
             <button class="card_book" data="0">
             Easy   A1
@@ -106,7 +107,8 @@
     </footer>
 
 
-<script src="./main.js" type="module"></script>
-<script src="./heder.js" type="module"></script>
+
+<script src="./book.js" type="module"></script>
+<!-- <script src="./main.js" type="module"></script>  -->
 </body>
 </html>
