--- a/src/book.html
+++ b/src/book.html
@@ -24,8 +24,8 @@
              
         </div>
     <section class="book_card">
-        <h1>Учебник</h1>
-        <p>Выберете уровень сложности</p>
+        <h1 class = "book_h1">Учебник</h1>
+        <h2>Выберете уровень сложности</h2>
         <div class="wrapper_book">
             <button class="card_book" data="0">
             Easy   A1
@@ -48,7 +48,7 @@
     </div>
     </section>
     <section class="text_book_container">
-<h1>Слова</h1>
+<h3>Слова</h3>
 <div class="grid_container">
     <nav class="word">
     </nav>
