--- a/src/sprint.html
+++ b/src/sprint.html
@@ -47,13 +47,15 @@
         </div>
         <div class="sprint_game">
 <h1>SCORE</h1>
-<h1>TIMER</h1>
+<h1 class="timer_sprint">TIMER</h1>
         </div>
         <div class="timer_collor">
 
         </div>
         <div class="words_sprint">
-            <h1>English</h1>
+       <h1 class="start">START</h1>
+       
+                  <h1>English</h1>
             <h1>RUS----------------</h1>
         </div>
         <div class="butoon_sprint">
