--- a/src/sprint.html
+++ b/src/sprint.html
@@ -56,7 +56,7 @@
        <h1 class="start">START</h1>
        
                   <h1>English</h1>
-            <h1>RUS----------------</h1>
+            <h1 class="norus">----------------</h1>
         </div>
         <div class="butoon_sprint">
 <button><h2 class="no">НЕ ВЕРНО</h2></button>
