--- a/src/sprint.html
+++ b/src/sprint.html
@@ -55,12 +55,12 @@
         <div class="words_sprint">
        <h1 class="start">START</h1>
        
-                  <h1>English</h1>
+                  <h1 class="english_word">English</h1>
             <h1 class="norus">----------------</h1>
         </div>
         <div class="butoon_sprint">
-<button><h2 class="no">НЕ ВЕРНО</h2></button>
-<button><h2 class="yes">ВЕРНО</h2></button>
+<button class="no_but"><h2 class="no">НЕ ВЕРНО</h2></button>
+<button class="yes_but"><h2 class="yes">ВЕРНО</h2></button>
         </div>
         
     </div>
