--- a/src/sprint.html
+++ b/src/sprint.html
@@ -46,7 +46,7 @@
             </button>
         </div>
         <div class="sprint_game">
-<h1>SCORE</h1>
+<h1 class="score_sprint">SCORE</h1>
 <h1 class="timer_sprint">TIMER</h1>
         </div>
         <div class="timer_collor">
